[package]
name = "main code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ripemd160 = "0.9"
sha2 = "0.9"
hex = "0.4"
secp256k1 = "0.29.1"
blake3 = "1.5.1"
byteorder = "1.4.2"
